--- a/src/app/pages/user/form/form.component.html
+++ b/src/app/pages/user/form/form.component.html
@@ -24,7 +24,7 @@
                               </div>
                               <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput [matDatepicker]="picker" placeholder="Data de Nascimento" formControlName="birthday">
+                                    <input matInput [matDatepicker]="picker" placeholder="Data de Nascimento" formControlName="birthday" [max]="today">
                                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                     <mat-datepicker #picker></mat-datepicker>
                                     <mat-error>Campo obrigatório</mat-error>
@@ -39,12 +39,10 @@
                               <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
                                     <select matNativeControl placeholder="Escolaridade" formControlName="graduation">
-                                      <option [value]="1">Fundamental - Incompleto</option>
-                                      <option [value]="2">Fundamental - Completo</option>
-                                      <option [value]="3">Médio - Incompleto</option>
-                                      <option [value]="4">Médio - Completo</option>
-                                      <option [value]="5">Superior - Incompleto</option>
-                                      <option [value]="6">Superior - Completo</option>
+                                      <option [value]="1">Infantil</option>
+                                      <option [value]="2">Fundamental</option>
+                                      <option [value]="3">Médio</option>
+                                      <option [value]="4">Superior</option>
                                     </select>
                                     <mat-error>Campo obrigatório</mat-error>
                                   </mat-form-field>
